Check logic